# quantum_of_thought

./: CLAUDE.md  README.md  mise.toml
cli_client/: Cargo.toml
cli_client/src/: main.rs  service.rs  storage.rs
cli_client/tests/: integration_test.rs
client_cli/: Cargo.toml  README.md
client_cli/src/: main.rs  service.rs  storage.rs
client_cli/tests/: integration_test.rs
client_web/: README.md  package-lock.json  package.json  vite.config.ts
client_web/src/: App.tsx  NoteStore.ts  NoteStoreContext.tsx  NoteStoreProvider.tsx  useNoteStore.ts  useNoteStoreContext.tsx
client_web/src/components/: App.tsx  NoteCard.tsx  NoteEditDialog.tsx  NoteStoreContext.tsx  useNoteStore.ts
client_web/src/lib/: index.ts  note.test.ts  note.ts  storage.ts
client_web/src/lib/network/: adapter.ts  httpAdapter.ts  index.ts
client_web/src/lib/notes/: NoteService.test.ts  NoteService.ts  NoteStore.ts  index.ts  wasmNote.ts
client_web/tests/e2e/: app.spec.ts
client_web/tests/tool/: fake.ts  index.ts  storage.ts
crdt_note/: .gitignore  Cargo.toml  README.md
crdt_note/src/: lib.rs
crdt_note_bad/: Cargo.toml
crdt_note_bad/src/: lib.rs
crdt_notes/: Cargo.toml
crdt_notes/src/: lib.rs  wasm.rs
notes/: .gitignore  Cargo.toml
notes/src/: lib.rs  note_crdt.rs  wasm.rs
server_web/: .gitignore  README.md  mix.exs
server_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server_web/lib/: qot_web.ex
server_web/lib/qot/: accounts.ex  application.ex  notes.ex  repo.ex
server_web/lib/qot_web/: endpoint.ex  router.ex
server_web/test/: test_helper.exs
server_web/test/qot/: accounts_test.exs  notes_test.exs
server_web/test/support/: auth_helpers.ex  channel_case.ex  conn_case.ex  data_case.ex
web_client/: package-lock.json  package.json
web_client/src/: App.tsx  NoteStore.ts  useNoteStore.ts
web_client/src/components/: NoteCard.tsx
(+23 files in other folders)
