[package]
name = "cli_client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "qot"
path = "src/main.rs"

[dependencies]
notes = { path = "../notes" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
