[package]
name = "crdt_note"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.18.1", features = ["v7", "js"] }
wasm-bindgen = "0.2.104"

[lib]
crate-type = ["lib", "cdylib"]
