[package]
name = "crdt_note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = "0.6"
uuid = { version = "1.0", features = ["v7"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["v7", "js"] }
