[package]
name = "crdt_notes"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge = "0.6"
uuid = { version = "1.0", features = ["v7"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.0", features = ["v7", "js"] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "serde"]
